使用 Colaboratory 建立

--- a/410606510陳娸琪.ipynb
+++ b/410606510陳娸琪.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "410606510陳娸琪.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFHfL8BxHInZc5a7F2Djd5",
+      "authorship_tag": "ABX9TyOD4zdbzq6aUW2CpPz7MKIH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,14 +30,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"HiHi\")"
+        "print('hey','hi','hello')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uRuB6iJvW7gh",
-        "outputId": "0f416c88-029d-4dbf-cf07-4a8a8b82470f"
+        "id": "rgE0ue45mi29",
+        "outputId": "fb26eb45-eeb5-43c2-a2c4-84cc585535d1"
       },
       "execution_count": null,
       "outputs": [
@@ -45,10 +45,501 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HiHi\n"
+            "hey hi hello\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('hey','hi','hello',sep='_')\n",
+        "print('hey','hi','hello',sep='\\t')\n",
+        "print('hey','hi','hello',sep='\\n')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U4foKzsPm4kQ",
+        "outputId": "9ac3a52d-3582-4d7f-d776-467e4ad6bd39"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hey_hi_hello\n",
+            "hey\thi\thello\n",
+            "hey\n",
+            "hi\n",
+            "hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('午安,')\n",
+        "print('同學好！')\n",
+        "print('打起精神來！！')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DdWsKEAxoLHR",
+        "outputId": "044d86c5-92ae-447f-9c7e-dd39038cb182"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "午安,\n",
+            "同學好！\n",
+            "打起精神來！！\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('午安,','同學好！','打起精神來！！',sep='\\n')"
+      ],
+      "metadata": {
+        "id": "VgMq6KPYoua7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f5c4805-53a5-44e1-ee77-7e8669c151d0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "午安,\n",
+            "同學好！\n",
+            "打起精神來！！\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(123)\n",
+        "print(456)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "37fzPQ2Gpgh3",
+        "outputId": "9716fc9e-1c96-4e81-e866-aed178ea8d87"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "456\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(123,end=',')\n",
+        "print(456)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GMwkwZRcpl0j",
+        "outputId": "55688ed1-e1ea-4b30-e2ac-c53db8dd0f92"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123,456\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(123,end='')\n",
+        "print(456)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WbFl_3tRp5Sg",
+        "outputId": "7acc4b70-2dbe-4306-9da5-cd02188c2995"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123456\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('午安','同學好','打起精神來',sep='_', end='!!!')"
+      ],
+      "metadata": {
+        "id": "KR8LbwAqtFp0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "322c52e3-0ef1-4810-b3a6-5e0f4882a03c"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "午安_同學好_打起精神來!!!"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('下午好','平安順心','健康如意',sep=',', end='^^')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6HjyC5xnqvGy",
+        "outputId": "c521cc79-7192-4e51-fb5b-3361585fa5b9"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "下午好,平安順心,健康如意^^"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test1 = input('輸入')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TOA1pKq_vLS8",
+        "outputId": "92ac5c1f-f594-427a-ad2d-27593d1dab74"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "輸入123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(test1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TCIETj43vLnP",
+        "outputId": "b8d314f0-6689-4bec-833c-ab3cec45f5a4"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test2 = int(input('輸入'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n2AITfMNvL2U",
+        "outputId": "e1265831-ba9c-47b4-aca0-31bbac4a5809"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "輸入123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(test2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D9sZae0kwTmv",
+        "outputId": "0b4be346-6b72-4ce3-8be1-c8ae2c4c812c"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test2 + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "An9jKBUQwqrt",
+        "outputId": "f074ea9d-280c-41e8-d3cf-b2b8ae19963e"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "124"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test3 = int(input('請輸入月份'))\n",
+        "test4 = int(input('請輸入日期'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "izTRABrEw1HY",
+        "outputId": "de7b3681-fdc5-4606-ce6f-a9434839de2e"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入月份3\n",
+            "請輸入日期21\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0icMYl9Uw1lD",
+        "outputId": "70c49cc3-8b9e-44be-bad6-c0da52ee49b5"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0AJlT-TWw2jQ",
+        "outputId": "e1537ac9-dd47-456b-f119-81c97f78d6e5"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('今天是',test3,'月',test4,'號', sep='')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9mtsu83kw31e",
+        "outputId": "a3f9f9b9-d4f0-401b-ada6-e3eaf2cc120a"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "今天是3月21號\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test1= int(input('請輸入國文成績'))\n",
+        "test2= int(input('請輸入數學成績'))\n",
+        "test3= int(input('請輸入英文成績'))\n",
+        "print('你的成績總分為：',test1 + test2 + test3, sep='')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s5OK8j8FzAMx",
+        "outputId": "2f9b7c55-298e-4220-dc68-90e8bc41930a"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入國文成績50\n",
+            "請輸入數學成績70\n",
+            "請輸入英文成績60\n",
+            "你的成績總分為：180\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4OXpEhqpzAn8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "sGr75-S_zA91"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bksbQ1adzBSQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "iSZDoP_2zBlp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
