使用 Colaboratory 建立

--- a/410606510陳娸琪.ipynb
+++ b/410606510陳娸琪.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "410606510陳娸琪.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOD4zdbzq6aUW2CpPz7MKIH",
+      "authorship_tag": "ABX9TyMl5xYiQ4ol6JPSzWXHmowd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,7 +216,7 @@
         },
         "outputId": "322c52e3-0ef1-4810-b3a6-5e0f4882a03c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "id": "6HjyC5xnqvGy",
         "outputId": "c521cc79-7192-4e51-fb5b-3361585fa5b9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "TOA1pKq_vLS8",
         "outputId": "92ac5c1f-f594-427a-ad2d-27593d1dab74"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -285,7 +285,7 @@
         "id": "TCIETj43vLnP",
         "outputId": "b8d314f0-6689-4bec-833c-ab3cec45f5a4"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         "id": "n2AITfMNvL2U",
         "outputId": "e1265831-ba9c-47b4-aca0-31bbac4a5809"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -331,7 +331,7 @@
         "id": "D9sZae0kwTmv",
         "outputId": "0b4be346-6b72-4ce3-8be1-c8ae2c4c812c"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "id": "An9jKBUQwqrt",
         "outputId": "f074ea9d-280c-41e8-d3cf-b2b8ae19963e"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +381,7 @@
         "id": "izTRABrEw1HY",
         "outputId": "de7b3681-fdc5-4606-ce6f-a9434839de2e"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -405,7 +405,7 @@
         "id": "0icMYl9Uw1lD",
         "outputId": "70c49cc3-8b9e-44be-bad6-c0da52ee49b5"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
         "id": "0AJlT-TWw2jQ",
         "outputId": "e1537ac9-dd47-456b-f119-81c97f78d6e5"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +457,7 @@
         "id": "9mtsu83kw31e",
         "outputId": "a3f9f9b9-d4f0-401b-ada6-e3eaf2cc120a"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,42 +471,32 @@
     {
       "cell_type": "code",
       "source": [
-        "test1= int(input('請輸入國文成績'))\n",
-        "test2= int(input('請輸入數學成績'))\n",
-        "test3= int(input('請輸入英文成績'))\n",
-        "print('你的成績總分為：',test1 + test2 + test3, sep='')"
+        "test1 = int(input('請輸入國文成績'))\n",
+        "test2 = int(input('請輸入英文成績'))\n",
+        "test3 = int(input('請輸入數學成績'))\n",
+        "print('你的成績總分為：', test1 + test2 + test3, sep='\\n')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "s5OK8j8FzAMx",
-        "outputId": "2f9b7c55-298e-4220-dc68-90e8bc41930a"
+        "id": "4OXpEhqpzAn8",
+        "outputId": "c7924c91-954a-42ac-bcf7-557411a6ce83"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入國文成績50\n",
-            "請輸入數學成績70\n",
             "請輸入英文成績60\n",
-            "你的成績總分為：180\n"
+            "請輸入數學成績70\n",
+            "你的成績總分為：\n",
+            "180\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "4OXpEhqpzAn8"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
